[gd_scene load_steps=17 format=3 uid="uid://bn1csj47sa2bw"]

[ext_resource type="Script" uid="uid://b40hrfks2w7u6" path="res://assets/Levels/Scripts/PauseMenuLogic.gd" id="1_p4p5w"]
[ext_resource type="Texture2D" uid="uid://be1h2ja4pyni1" path="res://assets/Sprites/screenshot.png" id="2_b6kau"]
[ext_resource type="Texture2D" uid="uid://dk8qs15tgkthx" path="res://assets/Sprites/bg.png" id="3_6l5tb"]
[ext_resource type="Script" uid="uid://0xbub3erkcxb" path="res://assets/Levels/Scripts/PauseMenuTransition.gd" id="4_i1blh"]
[ext_resource type="Texture2D" uid="uid://cpkuxgr2hg7ll" path="res://assets/Sprites/menus/logo.png" id="5_0d5a2"]
[ext_resource type="StyleBox" uid="uid://c1edtywsppgxy" path="res://assets/Sprites/menus/selectStylebox2.tres" id="7_kynhk"]
[ext_resource type="Texture2D" uid="uid://qot7qahghomi" path="res://assets/Sprites/PauseMenuConfigButton.png" id="8_7qegd"]
[ext_resource type="Script" uid="uid://3crm18ad88ys" path="res://assets/Levels/Scripts/menu_button.gd" id="9_itrmr"]
[ext_resource type="StyleBox" uid="uid://dirm08jxjyusl" path="res://assets/Sprites/menus/selectStylebox.tres" id="10_gopbp"]
[ext_resource type="Texture2D" uid="uid://dt72x52yyj1wa" path="res://assets/Sprites/PauseMenuButton.png" id="11_1to64"]
[ext_resource type="Texture2D" uid="uid://0s62gu0b77n1" path="res://assets/Sprites/PauseMenuGoBackButton.png" id="12_cvx7u"]

[sub_resource type="Animation" id="Animation_xvgwm"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1750, 374.562)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PauseMenuGoBackButton2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1160, 584)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PauseMenuConfigButton2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1170, 419)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PauseMenuButton2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(605, 106)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../TitlemenuPlaceholder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(384, 213)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Bg:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(520, 300)]
}

[sub_resource type="Animation" id="Animation_71pd5"]
resource_name = "fade_movement"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(690, 1224), Vector2(657, 1524)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PauseMenuButton2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(74, 300), Vector2(-220, 101)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PauseMenuConfigButton2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 383), Vector2(-161, 166)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PauseMenuGoBackButton2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, 439.59), Vector2(-157, 167)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../TitlemenuPlaceholder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(384, 213.008), Vector2(275, 213.008)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Bg:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2019, 466), Vector2(520, 300)]
}

[sub_resource type="Animation" id="Animation_h07xo"]
resource_name = "initial_movement"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(657, 1524), Vector2(690, 1224)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PauseMenuButton2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-220, 101), Vector2(74, 300)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PauseMenuConfigButton2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-161, 166), Vector2(320, 383)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PauseMenuGoBackButton2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-157, 167), Vector2(520, 439.59)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../TitlemenuPlaceholder:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(201, 210), Vector2(384, 213.008)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Bg:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, 300), Vector2(2220, 351)]
}

[sub_resource type="Animation" id="Animation_3qh4w"]
resource_name = "main_movement"
length = 5.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(690, 1224), Vector2(690, 1143), Vector2(690, 1257)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PauseMenuButton2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.56667, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(74, 300), Vector2(74, 183.793), Vector2(74, 300)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PauseMenuConfigButton2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.1, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(320, 383), Vector2(320, 259.23), Vector2(320, 383)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PauseMenuGoBackButton2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.7, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(520, 439.59), Vector2(520, 319.405), Vector2(520, 439.59)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../TitlemenuPlaceholder:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333, 2.4, 4.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(384, 213), Vector2(384, 172), Vector2(384, 213)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Bg:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2216, 548)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vy804"]
_data = {
&"RESET": SubResource("Animation_xvgwm"),
&"fade_movement": SubResource("Animation_71pd5"),
&"initial_movement": SubResource("Animation_h07xo"),
&"main_movement": SubResource("Animation_3qh4w")
}

[node name="control_pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 2

[node name="pause_menu" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("1_p4p5w")

[node name="Sprite2D" type="Sprite2D" parent="pause_menu"]
position = Vector2(691, 373)
scale = Vector2(0.744436, 0.744436)
texture = ExtResource("2_b6kau")

[node name="Transition" type="Sprite2D" parent="pause_menu"]
position = Vector2(1750, 374.562)
rotation = 1.33518
scale = Vector2(-1.21884, 1.21061)
texture = ExtResource("3_6l5tb")
offset = Vector2(-76.585, 0)
script = ExtResource("4_i1blh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="pause_menu/Transition"]
libraries = {
&"": SubResource("AnimationLibrary_vy804")
}

[node name="PauseMenuConfigButton2" type="Button" parent="pause_menu"]
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -832.0
offset_top = 383.0
offset_right = -672.0
offset_bottom = 548.0
grow_horizontal = 0
theme_override_styles/focus = ExtResource("7_kynhk")
icon = ExtResource("8_7qegd")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("9_itrmr")
BUTTON_ACTION = 3

[node name="PauseMenuButton2" type="Button" parent="pause_menu"]
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1078.0
offset_top = 300.0
offset_right = -872.0
offset_bottom = 512.0
grow_horizontal = 0
theme_override_styles/focus = ExtResource("10_gopbp")
icon = ExtResource("11_1to64")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("9_itrmr")
BUTTON_ACTION = 4
ADITIONAL_ARGUMENT = "select_level"

[node name="PauseMenuGoBackButton2" type="Button" parent="pause_menu"]
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -632.0
offset_top = 439.59
offset_right = -478.0
offset_bottom = 598.59
grow_horizontal = 0
theme_override_styles/focus = ExtResource("7_kynhk")
icon = ExtResource("12_cvx7u")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("9_itrmr")
BUTTON_ACTION = 2

[node name="TitlemenuPlaceholder" type="Sprite2D" parent="pause_menu"]
position = Vector2(384, 213)
scale = Vector2(0.61, 0.61)
texture = ExtResource("5_0d5a2")

[node name="Bg" type="Sprite2D" parent="pause_menu"]
z_index = 2
position = Vector2(520, 300)
texture = ExtResource("3_6l5tb")
flip_h = true

[connection signal="pressed" from="pause_menu/PauseMenuConfigButton2" to="pause_menu/PauseMenuConfigButton2" method="_on_pressed"]
[connection signal="pressed" from="pause_menu/PauseMenuButton2" to="pause_menu/PauseMenuButton2" method="_on_pressed"]
[connection signal="pressed" from="pause_menu/PauseMenuGoBackButton2" to="pause_menu/PauseMenuGoBackButton2" method="_on_pressed"]
